jeditor: the Java editor's host, launcher and whim test --java -- milestone 3
The Java backend writes the core as an abstract Editor whose 17 host
functions are abstract methods; this is what makes it an editor: jeditor/
holds the rest, each piece the Java of a Go file in editor/.

- host/Host.java, Exit.java: host.go's Host in Java's types, and the
  exception an embedding host throws in exit.
- Whim.java: the glue, `final class Whim extends Editor` (in the unnamed
  package, as Editor and its package-private methods are), the arena's
  accounting in host_alloc, main(Host, byte[][]) returning the status, and
  the launcher's main: the core on a thread with a 1 GiB stack, the
  arguments' bytes from /proc/self/cmdline.
- host/Printf.java: format.go's vim_snprintf, line for line, given the core
  through an interface so it runs without an Editor.
- host/Term.java, Signals.java: term.go's terminal host through the Foreign
  Function & Memory API (ioctl TCGETS/TCSETS/TIOCGWINSZ, select, read,
  write, pipe2, kill, sigpending) and sun.misc.Signal, with the Go's
  deviations and one of its own: suspend waits until SIGTSTP is no longer
  pending before putting the handler back, since the JVM's other threads may
  take the signal after kill returns (measured: otherwise it is read as a
  key and the process never stops).
- jeditor.go: the build -- the Makefile's cut, Editor.java generated,
  javac, and a launcher script -- as `go tool whim java` and
  `make bin/whim-java`.

whim test --java (and --wide --java, make whim-test-java) builds the Java
editor from the candidate beside the other four builds and requires it to
answer every case as the C candidate does, with a control of its own:
" INSERT" changed in the generated Editor.java, which must move the Java
editor's own answers -- against the C, an editor that stops before drawing
would see any control. What stops it is counted from its stderr. The
default suite is unchanged: 45 and 240 cases green.

Verified: TestJavaPri